build: initialize JDK 17 build